# opencv

./: CMakeLists.txt  CMakePresets.json  README.md  Triangle.hpp  rasterizer.cpp  test.cpp
